test/cli/test-validating-policy/restrict-image-registries/context.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Context
metadata:
  name: context
spec:
  resources:
  - apiVersion: v1
    kind: ConfigMap
    metadata:
      name: clusterregistries
      namespace: default
    data:
      registries: "ghcr.io, myregistry"
