test/cli/test-validating-policy/restrict-image-registries/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: advanced-restrict-image-registries
policies:
- policy.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: advanced-restrict-image-registries
  resources:
  - badpod01
  - imageregistries-ns01/badpod02
  - imageregistries-ns01/badpod03
  - badpod04
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: advanced-restrict-image-registries
  resources:
  - imageregistries-ns01/goodpod01
  - imageregistries-ns01/goodpod02
  - goodpod03
  result: pass
context: context.yaml
variables: value.yaml
